Correct toolbar item spacing

--- a/source/sass/components/@health/_health-toolbar.scss
+++ b/source/sass/components/@health/_health-toolbar.scss
@@ -8,14 +8,12 @@
   &__items {
     >li {
       margin: 0;
-      @include AU-space(margin-right, 1.1unit);
-
-      @include AU-media(sm) {
-        @include AU-space(margin-right, 1unit);
-      }
-
       float: left;
       display: block;
+
+      .au-btn {
+        margin-bottom: 0;
+      }
     }
   }
 
